fixed z-index of chat box

--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ body {
 }
 
 .rw {
-  width: :100%;
+  width: 100%;
   height: 50%
 }
 
@@ -206,7 +206,7 @@ body {
   margin: 0;
   height: 100%;
   width: 100%;
-  z-index: 1;
+  z-index: 998;
   position: relative;
   display: block;
   top: 0;
@@ -217,7 +217,7 @@ body {
   margin: 0;
   height: 100%;
   width: 100%;
-  z-index: 2;
+  z-index: 999;
   position: relative;
   top: -100%;
   left: -100%;
